vlib/v/checker/tests/json_decode.out
vlib/v/checker/tests/json_decode.vv:11:7: error: decoder2.decode: unknown type `St2`
    9 | fn main() {
   10 |     decoder2.decode[St]('{a: ""}')! // OK
   11 |     decoder2.decode[St2]('{a: ""}')! // BAD
      |          ~~~~~~~~~~~~~~~~~~~~~~
   12 |     decoder2.decode(St)! // BAD
   13 |     decoder2.decode[string]('""')! // BAD
vlib/v/checker/tests/json_decode.vv:12:7: error: decoder2.decode expects 2 arguments, a type and a string (e.g `decoder2.decode[T]('')`)
   10 |     decoder2.decode[St]('{a: ""}')! // OK
   11 |     decoder2.decode[St2]('{a: ""}')! // BAD
   12 |     decoder2.decode(St)! // BAD
      |          ~~~~~~~~~~
   13 |     decoder2.decode[string]('""')! // BAD
   14 |     decoder2.decode[Num]('5')! // BAD
vlib/v/checker/tests/json_decode.vv:12:17: error: unexpected `!`, the function `decoder2.decode` does not return a Result
   10 |     decoder2.decode[St]('{a: ""}')! // OK
   11 |     decoder2.decode[St2]('{a: ""}')! // BAD
   12 |     decoder2.decode(St)! // BAD
      |                    ^
   13 |     decoder2.decode[string]('""')! // BAD
   14 |     decoder2.decode[Num]('5')! // BAD
vlib/v/checker/tests/json_decode.vv:13:14: error: decoder2.decode: expected sum type, struct, map or array, found string
   11 |     decoder2.decode[St2]('{a: ""}')! // BAD
   12 |     decoder2.decode(St)! // BAD
   13 |     decoder2.decode[string]('""')! // BAD
      |                 ~~~~~~
   14 |     decoder2.decode[Num]('5')! // BAD
   15 |     decoder2.decode[St](6)! // BAD
vlib/v/checker/tests/json_decode.vv:14:14: error: decoder2.decode: expected sum type, struct, map or array, found u8
   12 |     decoder2.decode(St)! // BAD
   13 |     decoder2.decode[string]('""')! // BAD
   14 |     decoder2.decode[Num]('5')! // BAD
      |                 ~~~
   15 |     decoder2.decode[St](6)! // BAD
   16 | }
vlib/v/checker/tests/json_decode.vv:15:7: error: decoder2.decode: second argument needs to be a string
   13 |     decoder2.decode[string]('""')! // BAD
   14 |     decoder2.decode[Num]('5')! // BAD
   15 |     decoder2.decode[St](6)! // BAD
      |          ~~~~~~~~~~~~~
   16 | }
