vlib/v/checker/tests/json_decode.vv
import x.json2 as json
import x.json2.decoder2

struct St {
	a string
}

type Num = u8

fn main() {
	decoder2.decode[St]('{a: ""}')! // OK
	decoder2.decode[St2]('{a: ""}')! // BAD
	decoder2.decode(St)! // BAD
	decoder2.decode[string]('""')! // BAD
	decoder2.decode[Num]('5')! // BAD
	decoder2.decode[St](6)! // BAD
}
